build: Add azure.tcl and theme folder to AppImageBuilder script.

--- a/appimage/AppImageBuilder.yml
+++ b/appimage/AppImageBuilder.yml
@@ -20,6 +20,8 @@ script:
   # Package the app.
   - mkdir -p "$TARGET_APPDIR"/usr/{src,share/icons/hicolor/128x128/apps}
   - cp -r "$SOURCE_DIR/../lang" "$SOURCE_DIR/../pickaxe.ico" "$SOURCE_DIR"/../*.py "$TARGET_APPDIR/usr/src"
+  - cp "$SOURCE_DIR/../azure.tcl" "$TARGET_APPDIR/usr/src"
+  - cp -r "$SOURCE_DIR/../theme" "$TARGET_APPDIR/usr/src/theme"
   - cp "$SOURCE_DIR/pickaxe.png" "$TARGET_APPDIR/usr/share/icons/hicolor/128x128/apps/io.github.devilxd.twitchdropsminer.png"
 
   # Install requirements.
